Added Final comments

--- a/Heat Energy equation discovery using deepymod.ipynb
+++ b/Heat Energy equation discovery using deepymod.ipynb
@@ -5,9 +5,8 @@
    "id": "e996711c-9fee-4852-a990-ba6f88405a7d",
    "metadata": {},
    "source": [
-    "### Authors: \n",
-    "- Halidu Abdulai\n",
-    "- Pragati Manandhar"
+    "### Author: \n",
+    "__Halidu Abdulai__"
    ]
   },
   {
@@ -15,11 +14,11 @@
    "id": "9fb6a206-a872-4306-ad70-57996fa32a1f",
    "metadata": {},
    "source": [
-    "#### In this tutorial, we will be Illustrating heat equation discovery using the  DeepyMoD library: An equation discovery library which is built on top of the SinDy library. For simplicity, we will begin by demonstrating how the governing PDE of heat transfer across a rod can be discovered by considering one-dimensional case scenario. The partial differential equation governing the distribution of heat across a one-dimensional space is given by the following equation\n",
+    "#### In this tutorial, I will be Illustrating heat equation discovery using the  DeepyMoD library: An equation discovery library which is built on top of the SinDy library. For simplicity, we will begin by demonstrating how the governing PDE of heat transfer across a rod can be discovered by considering one-dimensional case scenario. The partial differential equation governing the distribution of heat across a one-dimensional space is given by the following equation\n",
     "#### $\\frac{du}{dt}$ = $\\alpha$($\\frac{d^2u}{dx^2}$)\n",
     "#### For d-dimension (e.g., 3-dimension), the equation becomes: $\\frac{du}{dt}$ = $\\alpha$($\\frac{d^2u}{dx^2}$ + $\\frac{d^2u}{dy^2}$ + $\\frac{d^2u}{dz^2}$)\n",
     "\n",
-    "### we will try to model the distribution of heat across a uniform rod of length 10 units, which initially has high temperature at the middle of it and low (0 assumed) temperature at both extremes."
+    "### I will try to model the distribution of heat across a uniform rod of length 10 units, which initially has high temperature at the middle of it and low (0 assumed) temperature at both extremes."
    ]
   },
   {
@@ -86,7 +85,7 @@
    "source": [
     "### Prepare the data\n",
     "\n",
-    "We will employ the explicit finite difference method to simulate heat distribution along a rod over time, based on the heat equation. The method discretizes the rod into spatial points and advances the simulation through discrete time steps. Temperature at each interior point is updated using a difference equation that approximates the heat equation's behavior. Boundary conditions maintain constant temperatures at the rod's ends, while an initial temperature profile is set across its length. The rule for updating the temperature at each time step is given by: $T_i^{(new)}$ = $T_i$ + $\\alpha$ $\\frac{dt}{dx^2}$ ($T_{i+1}$ - 2$T_i$ + $T_{i-1}$)\n",
+    "I will employ the explicit finite difference method to simulate heat distribution along a rod over time, based on the heat equation. The method discretizes the rod into spatial points and advances the simulation through discrete time steps. Temperature at each interior point is updated using a difference equation that approximates the heat equation's behavior. Boundary conditions maintain constant temperatures at the rod's ends, while an initial temperature profile is set across its length. The rule for updating the temperature at each time step is given by: $T_i^{(new)}$ = $T_i$ + $\\alpha$ $\\frac{dt}{dx^2}$ ($T_{i+1}$ - 2$T_i$ + $T_{i-1}$)\n",
     "\n",
     "where:\n",
     "- $T_i$ is the temperature at the $i^{th}$ spatial point at the current time step.\n",
